--- a/static/css/base/base.css
+++ b/static/css/base/base.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
 }
@@ -16,6 +16,7 @@ body {
     display: flex;
     flex-direction: column;
 }
+
 
 .wrapper {
     flex: 1;
