--- a/static/css/familytree/entire_view.css
+++ b/static/css/familytree/entire_view.css
@@ -59,6 +59,7 @@ h2::after {
     justify-content: center;
     align-items: center;
     position: relative;
+    gap: 20px;
 }
 
 /* person cards */
@@ -68,8 +69,7 @@ h2::after {
     padding: 15px 20px;
     border-radius: 15px;
     height: 180px;
-    min-width: 160px;
-    max-width: 200px;
+    width: 200px;
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.08);
     transition: transform 0.2s ease, box-shadow 0.2s ease;
