--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -63,7 +63,7 @@
             {% endfor %}
           </div>
           <div id="partner-display-buttons">
-            {% if person.partner < 1 %}
+            {% if person.partner|length < 1 %}
               <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Partner">Add Partner</a>
             {% else %}
               <button class="btn btn-outline-success" onclick="toggleSection('partner-list', 'partner-display-buttons')">Display Partner</button>
