--- a/staticfiles/css/account/signup.css
+++ b/staticfiles/css/account/signup.css
@@ -17,6 +17,10 @@ h1 {
     margin-bottom: 1.5rem;
 }
 
+.errorlist {
+    color: #e14444;
+}
+
 .signup {
     max-width: 500px;
     margin: 2rem auto;
