--- a/staticfiles/css/base/base.css
+++ b/staticfiles/css/base/base.css
@@ -6,9 +6,8 @@
     --primary-color: #ae8c1a;
 }
 
-html,
 body {
-    height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
 }
@@ -17,6 +16,7 @@ body {
     display: flex;
     flex-direction: column;
 }
+
 
 .wrapper {
     flex: 1;
@@ -46,6 +46,14 @@ body {
 .navbar a.active {
     color: var(--primary-color) !important;
     text-decoration: underline;
+}
+
+.message-container {
+    position: absolute;
+    z-index: 1000; 
+    left: 50%;
+    top: 15%;
+    transform: translate(-50%, -50%);
 }
 
 footer {
