--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -18,17 +18,15 @@
             {% include 'familytree/_person_card.html' with person=parent pov_id=person.id %}
           {% endfor %}
         </div>
+      </div>
 
-        <div class="row justify-content-center" id="parent-display-buttons">
-          {% if person.parents.all|length < 1 %}
-            <div class="col-2">
-              <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success m-2" aria-label="Add Parent">Add Parent</a>
-            </div>
-          {% else %}
-            <button class="btn btn-outline-success col-2 m-2" onclick="toggleSection('parents-list', 'parent-display-buttons')">Display Parents</button>
-            <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Parent">Add Parent</a>
-          {% endif %}
-        </div>
+      <div class="row justify-content-center" id="parent-display-buttons">
+        {% if person.parents.all|length < 1 %}
+          <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success m-2 col-2" aria-label="Add Parent">Add Parent</a>
+        {% else %}
+          <button class="btn btn-outline-success col-2 m-2" onclick="toggleSection('parents-list', 'parent-display-buttons')">Display Parents</button>
+          <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Parent">Add Parent</a>
+        {% endif %}
       </div>
 
       {% comment %}Display middle-section{% endcomment %}
