--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -53,7 +53,7 @@
           {% include 'familytree/_person_card.html' with person=person pov_id=person.id %}
         </div>
 
-        {% comment %}Display Partner{% endcomment %}
+        {% comment %}Display Partners{% endcomment %}
         <div class="col-4 align-self-center d-flex justify-content-center" id="partner-container">
           <div id="partner-list" style="display: none;">
             {% for partner in person.partners.all %}
@@ -61,10 +61,10 @@
             {% endfor %}
           </div>
           <div id="partner-display-buttons">
-            {% if person.partner|length < 1 %}
+            {% if person.partners.all|length > 0 %}
+              <button class="btn btn-outline-success" onclick="toggleSection('partner-list', 'partner-display-buttons')">Display Partner</button>
               <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Partner">Add Partner</a>
             {% else %}
-              <button class="btn btn-outline-success" onclick="toggleSection('partner-list', 'partner-display-buttons')">Display Partner</button>
               <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Partner">Add Partner</a>
             {% endif %}
           </div>
