--- a/static/css/base/base.css
+++ b/static/css/base/base.css
@@ -7,16 +7,12 @@
 }
 
 body {
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
-}
-
-body {
     display: flex;
     flex-direction: column;
 }
-
 
 .wrapper {
     flex: 1;
