--- a/static/css/familytree/_person_card.css
+++ b/static/css/familytree/_person_card.css
@@ -30,7 +30,7 @@
 .person-info h5 {
   font-family: 'Playfair Display', serif;
   font-size: 1.25rem;
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.5rem;
 }
 
 .person-info p {
@@ -51,8 +51,12 @@
 }
 
 .current-focus {
-  background-color: #f0c14b;
+  background-color: #f0c14bd8;
+  padding: 1px;
+  margin: 0;
+  width: 60%;
   color: #111;
   font-weight: bold;
   text-decoration: none;
+  border-radius: 5px;
 }
