--- a/familytree/templates/familytree/edit_person.html
+++ b/familytree/templates/familytree/edit_person.html
@@ -14,7 +14,7 @@
     <div class="text-center">
       <h2>You are editing: {{ person.first_name }}</h2>
       {% if 'placeholder' in person.featured_image.url %}
-        <img class="profile-image" src="{% static 'images/user_default_images/default-image.png' %}" alt="placeholder image" />
+        <img class="profile-image" src="{% static 'images/user_default_images/default-image.webp' %}" alt="placeholder image" />
       {% else %}
         <img class="profile-image" src="{{ person.featured_image.url }}" alt="{{ person.first_name }}" />
       {% endif %}
