--- a/familytree/templates/familytree/entire_view.html
+++ b/familytree/templates/familytree/entire_view.html
@@ -24,8 +24,8 @@
               <a href="{% url 'classic_tree_view' gp.id %}">{{ gp.first_name }} {{ gp.last_name }}</a>
             </div>
             <div class="person-actions mt-2">
-              <a href="{% url 'view_details' pov.id gp.id %}" class="btn btn-outline-primary btn-sm">View Details</a>
-              <a href="{% url 'family_view' gp.id %}" class="btn btn-outline-secondary btn-sm">Focused View</a>
+              <a href="{% url 'view_details' pov.id gp.id %}" class="btn btn-outline-primary">View Details</a>
+              <a href="{% url 'family_view' gp.id %}" class="btn btn-outline-secondary">Focused View</a>
             </div>
           </div>
         {% endfor %}
@@ -41,11 +41,11 @@
         {% for pp in partner_parents %}
           <div class="person-box alt-line">
             <div class="person-name">
-              <a href="{% url 'classic_tree_view' pp.id %}">{{ pp.first_name }} {{ pp.last_name }}</a>
+              <a href="{% url 'classic_tree_view' pp.id %}">{{ pp.first_name }} {{ pp.last_name }} (partners side)</a>
             </div>
             <div class="person-actions mt-2">
-              <a href="{% url 'view_details' pov.id pp.id %}" class="btn btn-outline-primary btn-sm">View Details</a>
-              <a href="{% url 'family_view' pp.id %}" class="btn btn-outline-secondary btn-sm">Focused View</a>
+              <a href="{% url 'view_details' pov.id pp.id %}" class="btn btn-outline-primary">View Details</a>
+              <a href="{% url 'family_view' pp.id %}" class="btn btn-outline-secondary">Focused View</a>
             </div>
           </div>
         {% endfor %}
@@ -55,8 +55,8 @@
               <a href="{% url 'classic_tree_view' p.id %}">{{ p.first_name }} {{ p.last_name }}</a>
             </div>
             <div class="person-actions mt-2">
-              <a href="{% url 'view_details' pov.id p.id %}" class="btn btn-outline-primary btn-sm">View Details</a>
-              <a href="{% url 'family_view' p.id %}" class="btn btn-outline-secondary btn-sm">Focused View</a>
+              <a href="{% url 'view_details' pov.id p.id %}" class="btn btn-outline-primary">View Details</a>
+              <a href="{% url 'family_view' p.id %}" class="btn btn-outline-secondary">Focused View</a>
             </div>
           </div>
         {% endfor %}
@@ -78,8 +78,8 @@
             <a href="{% url 'classic_tree_view' pov.id %}">{{ pov.first_name }} {{ pov.last_name }} (current focus)</a>
           </div>
           <div class="person-actions mt-2">
-            <a href="{% url 'view_details' pov.id pov.id %}" class="btn btn-outline-primary btn-sm">View Details</a>
-            <a href="{% url 'family_view' pov.id %}" class="btn btn-outline-secondary btn-sm">Focused View</a>
+            <a href="{% url 'view_details' pov.id pov.id %}" class="btn btn-outline-primary">View Details</a>
+            <a href="{% url 'family_view' pov.id %}" class="btn btn-outline-secondary">Focused View</a>
           </div>
         </div>
 
@@ -89,8 +89,8 @@
               <a href="{% url 'classic_tree_view' partner.id %}">{{ partner.first_name }} {{ partner.last_name }}</a>
             </div>
             <div class="person-actions mt-2">
-              <a href="{% url 'view_details' pov.id partner.id %}" class="btn btn-outline-primary btn-sm">View Details</a>
-              <a href="{% url 'family_view' partner.id %}" class="btn btn-outline-secondary btn-sm">Focused View</a>
+              <a href="{% url 'view_details' pov.id partner.id %}" class="btn btn-outline-primary">View Details</a>
+              <a href="{% url 'family_view' partner.id %}" class="btn btn-outline-secondary">Focused View</a>
             </div>
           </div>
         {% endfor %}
@@ -109,8 +109,8 @@
               <a href="{% url 'classic_tree_view' c.id %}">{{ c.first_name }} {{ c.last_name }}</a>
             </div>
             <div class="person-actions mt-2">
-              <a href="{% url 'view_details' pov.id c.id %}" class="btn btn-outline-primary btn-sm">View Details</a>
-              <a href="{% url 'family_view' c.id %}" class="btn btn-outline-secondary btn-sm">Focused View</a>
+              <a href="{% url 'view_details' pov.id c.id %}" class="btn btn-outline-primary">View Details</a>
+              <a href="{% url 'family_view' c.id %}" class="btn btn-outline-secondary">Focused View</a>
             </div>
           </div>
         {% endfor %}
