--- a/familytree/templates/familytree/view_details.html
+++ b/familytree/templates/familytree/view_details.html
@@ -13,7 +13,7 @@
       <div class="detail-card">
         <div class="text-center mb-4">
           {% if 'placeholder' in person.featured_image.url %}
-            <img class="detail-image" src="{% static 'images/user_default_images/default-image.png' %}" alt="placeholder image" />
+            <img class="detail-image" src="{% static 'images/user_default_images/default-image.webp' %}" alt="placeholder image" />
           {% else %}
             <img class="detail-image" src="{{ person.featured_image.url }}" alt="{{ person.first_name }}" />
           {% endif %}
