--- a/static/css/familytree/_person_card.css
+++ b/static/css/familytree/_person_card.css
@@ -9,7 +9,7 @@
   margin: 1rem;
   text-align: center;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-  width: 300px;
+  min-width: 300px;
   height: fit-content;
   transition: transform 0.2s ease;
 }
@@ -19,8 +19,8 @@
 }
 
 .profile-image {
-  width: 100px;
-  height: 100px;
+  max-width: 100px;
+  max-height: 100px;
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 1rem;
