--- a/static/css/familytree/forms/add_parent.css
+++ b/static/css/familytree/forms/add_parent.css
@@ -4,7 +4,7 @@
 
 body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-        url('/static/images/backgrounds/familytree/old-oak.png');
+        url('/static/images/backgrounds/familytree/old-oak.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
