--- a/staticfiles/css/familytree/forms/add_self.css
+++ b/staticfiles/css/familytree/forms/add_self.css
@@ -4,7 +4,7 @@
 
 body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url('/static/images/backgrounds/familytree/seed.png');
+    url('/static/images/backgrounds/familytree/seed.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
