--- a/staticfiles/css/familytree/forms/add_sibling.css
+++ b/staticfiles/css/familytree/forms/add_sibling.css
@@ -4,7 +4,7 @@
 
 body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-        url('/static/images/backgrounds/familytree/connection.png');
+        url('/static/images/backgrounds/familytree/connection.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
