--- a/templates/500.html
+++ b/templates/500.html
@@ -8,7 +8,7 @@
     <h1 class="display-4">Internal server error (500)</h1>
     <p class="lead">Something has gone wrong. We are working on it!</p>
     <div class="d-flex flex-column align-items-center">
-      <img src="{% static 'images/logos/error.png' %}" alt="error" class="img-fluid mb-3" style="max-width: 300px; height: auto; border-radius: 12px;" />
+      <img src="{% static 'images/logos/error.webp' %}" alt="error" class="img-fluid mb-3" style="max-width: 300px; height: auto; border-radius: 12px;" />
       <a class="btn btn-primary mt-3" href="{% url 'home' %}" aria-label="Back to homepage">Back to homepage</a>
     </div>
   </div>
