--- a/templates/base.html
+++ b/templates/base.html
@@ -21,13 +21,13 @@
       <meta name="description" content="Create your family tree with Yggdrasil - private, secure and visual." />
       <meta property="og:title" content="Yggdrasil - The Tree of Family" />
       <meta property="og:description" content="Explore your family roots with a modern, data-secure family tree app." />
-      <meta property="og:image" content="{% static 'images/logos/yggdrasil_logo.png' %}" />
+      <meta property="og:image" content="{% static 'images/logos/yggdrasil_logo.webp' %}" />
       <meta property="og:type" content="website" />
     {% endblock %}
     {% block title %}
 
     {% endblock %}
-    <link rel="icon" type="image/x-icon" href="{% static 'images/logos/yggdrasil_logo.png' %}" />
+    <link rel="icon" type="image/x-icon" href="{% static 'images/logos/yggdrasil_logo.webp' %}" />
     {% comment %}Bootstrap CDN{% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous" />
     {% comment %}Custom CSS{% endcomment %}
@@ -49,7 +49,7 @@
       <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
           <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}" aria-label="Yggdrasil logo"><img src="{% static 'images/logos/yggdrasil_logo.png' %}" alt="Yggdrasil Logo" class="logo-image" /></a>
+            <a class="navbar-brand" href="{% url 'home' %}" aria-label="Yggdrasil logo"><img src="{% static 'images/logos/yggdrasil_logo.webp' %}" alt="Yggdrasil Logo" class="logo-image" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
             <div class="collapse navbar-collapse" id="navbarText">
