--- a/static/css/familytree/_person_card.css
+++ b/static/css/familytree/_person_card.css
@@ -5,6 +5,7 @@
 .person-card {
   background-color: #f5ebd4;
   border-radius: 16px;
+  border: 0.5px solid #00000033;
   padding: 1.5rem;
   margin: 1rem;
   text-align: center;
