--- a/static/css/familytree/entire_view.css
+++ b/static/css/familytree/entire_view.css
@@ -86,15 +86,11 @@ h2::after {
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
 }
 
-.person-name a {
+.person-name p {
     font-size: 1.1rem;
     font-weight: bold;
     color: #2c2c2c;
     text-decoration: none;
-}
-
-.person-name a:hover {
-    text-decoration: underline;
 }
 
 /* button section */
