Change button layout

--- a/familytree/templates/familytree/entire_view.html
+++ b/familytree/templates/familytree/entire_view.html
@@ -81,7 +81,7 @@
         <div class="person-box pov">
           <div class="person-name">
             <p>
-              {{ pov.first_name }} {{ pov.last_name }} <span class="current-focus">(currenty)</span>
+              {{ pov.first_name }} {{ pov.last_name }} <span class="current-focus">current focus</span>
             </p>
           </div>
           <div class="person-actions mt-2">
