--- a/familytree/templates/familytree/_person_card.html
+++ b/familytree/templates/familytree/_person_card.html
@@ -1,6 +1,7 @@
 {% load static %}
 <div class="person-card shadow-sm">
-  {% if "placeholder" in person.featured_image.url %}
+  <a href="{% url 'edit_person' pov_id person.id %}" class="edit-icon" aria-label="Edit Person"><i class="bi bi-pencil"></i></a>
+  {% if 'placeholder' in person.featured_image.url %}
     <img class="profile-image" src="{% static 'images/user_default_images/default-image.webp' %}" alt="placeholder image" />
   {% else %}
     <img class="profile-image" src="{{ person.featured_image.url }}" alt="{{ person.first_name }}" />
@@ -11,14 +12,10 @@
   </div>
 
   <div class="person-actions">
-    <a href="{% url 'view_details' pov_id person.id %}" class="btn btn-outline-primary btn-sm" aria-label="View Details">View Details</a>
-    <a href="{% url 'edit_person' pov_id person.id %}" class="btn btn-outline-primary btn-sm" aria-label="Person">Edit</a>
-    <a href="{% url 'classic_tree_view' person.id %}" class="btn btn-outline-secondary btn-sm">View Family Tree</a>
+    <a href="{% url 'view_details' pov_id person.id %}" class="btn btn-primary btn-sm" aria-label="View Details">View Details</a>
+    <a href="{% url 'classic_tree_view' person.id %}" class="btn btn-secondary btn-sm">View Family Tree</a>
     {% if person.id != pov_id %}
-      <a href="{% url 'family_view' person.id %}" class="btn btn-outline-secondary btn-sm" aria-label="Change Focus">Change Focus</a>
-      
-    {% else %}
-      <p class="current-focus align-self-center">Current Focus</p>
+      <a href="{% url 'family_view' person.id %}" class="btn btn-secondary btn-sm" aria-label="Change Focus">Change Focus</a>
     {% endif %}
   </div>
 </div>
