--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
     <link rel="icon" type="image/x-icon" href="{% static 'images/logos/yggdrasil_logo.webp' %}" />
     {% comment %}Bootstrap CDN{% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
     {% comment %}Custom CSS{% endcomment %}
     <link rel="stylesheet" href="{% static 'css/base/base.css' %}" />
     {% comment %}Font Awesome CDN{% endcomment %}
@@ -119,7 +120,9 @@
     </div>
     <footer class="footer text-center bg-white">
       <div class="container">
-        <p class="footer-text">© {{ year }} Yggdrasil – The Tree of Family. All rights reserved. Created by<a href="https://github.com/fairytaib" target="_blank" rel="noopener noreferrer" aria-label="Link to Github">Sophjan Moubarrid</a></p>
+        <p class="footer-text">
+          © {{ year }} Yggdrasil – The Tree of Family. All rights reserved. Created by<a href="https://github.com/fairytaib" target="_blank" rel="noopener noreferrer" aria-label="Link to Github">Sophjan Moubarrid</a>
+        </p>
         <nav class="footer-nav">
           <a href="{% url 'legal_notice' %}" aria-label="Legal notice">Legal Notice</a> |
           <a href="{% url 'privacy_policy' %}" aria-label="Privacy Policy">Privacy Policy</a> |
