--- a/familytree/templates/familytree/_person_card.html
+++ b/familytree/templates/familytree/_person_card.html
@@ -9,13 +9,14 @@
 
   <div class="person-info text-center">
     <h5>{{ person.first_name }} {{ person.last_name }}</h5>
+    <p>Birthday: {{person.birthday}}</p>
   </div>
 
   <div class="person-actions">
     <a href="{% url 'view_details' pov_id person.id %}" class="btn btn-primary btn-sm" aria-label="View Details">View Details</a>
     <a href="{% url 'classic_tree_view' person.id %}" class="btn btn-secondary btn-sm">View Family Tree</a>
     {% if person.id != pov_id %}
-      <a href="{% url 'family_view' person.id %}" class="btn btn-secondary btn-sm" aria-label="Change Focus">Change Focus</a>
+      <a href="{% url 'family_view' person.id %}" class="btn btn-secondary btn-sm" aria-label="Change Focus">Focus this person</a>
     {% endif %}
   </div>
 </div>
