--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -24,10 +24,10 @@
 
       <div class="row justify-content-center" id="parent-display-buttons">
         {% if person.parents.all|length < 1 %}
-          <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success m-2 col-2" aria-label="Add Parent">Add Parent</a>
+          <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-success m-2 col-5" aria-label="Add Parent">Add Parent</a>
         {% else %}
-          <button class="btn btn-outline-success col-2 m-2" onclick="toggleSection('parents-list', 'parent-display-buttons')">Display Parents</button>
-          <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Parent">Add Parent</a>
+          <button class="btn btn-success col-5 m-2" onclick="toggleSection('parents-list', 'parent-display-buttons')">Display Parents</button>
+          <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-success col-5 m-2" aria-label="Add Parent">Add Parent</a>
         {% endif %}
       </div>
 
@@ -42,10 +42,10 @@
           </div>
           <div id="siblings-display-buttons">
             {% if person.siblings|length > 0 %}
-              <button class="btn btn-outline-success m-2" onclick="toggleSection('sibling-list', 'siblings-display-buttons')">Display Siblings</button>
-              <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success m-2" aria-label="Add Sibling">Add Sibling</a>
+              <button class="btn btn-success m-2" onclick="toggleSection('sibling-list', 'siblings-display-buttons')">Display Siblings</button>
+              <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-success m-2" aria-label="Add Sibling">Add Sibling</a>
             {% else %}
-              <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success m-2" aria-label="Add Sibling">Add Sibling</a>
+              <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-success m-2" aria-label="Add Sibling">Add Sibling</a>
             {% endif %}
           </div>
         </div>
@@ -64,10 +64,10 @@
           </div>
           <div id="partner-display-buttons">
             {% if person.partners.all|length > 0 %}
-              <button class="btn btn-outline-success" onclick="toggleSection('partner-list', 'partner-display-buttons')">Display Partner</button>
-              <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Partner">Add Partner</a>
+              <button class="btn btn-success" onclick="toggleSection('partner-list', 'partner-display-buttons')">Display Partner</button>
+              <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-success" aria-label="Add Partner">Add Partner</a>
             {% else %}
-              <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Partner">Add Partner</a>
+              <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-success" aria-label="Add Partner">Add Partner</a>
             {% endif %}
           </div>
         </div>
@@ -83,10 +83,10 @@
       </div>
       <div class="row justify-content-center" id="children-display-buttons">
         {% if person.children.all|length > 0 %}
-          <button class="btn btn-outline-success col-2 m-2" onclick="toggleSection('children-list', 'children-display-buttons')">Display Children</button>
-          <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Child">Add Child</a>
+          <button class="btn btn-success col-5 m-2" onclick="toggleSection('children-list', 'children-display-buttons')">Display Children</button>
+          <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-success col-5 m-2" aria-label="Add Child">Add Child</a>
         {% else %}
-          <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Child">Add Child</a>
+          <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-success col-5 m-2" aria-label="Add Child">Add Child</a>
         {% endif %}
       </div>
     </div>
@@ -95,7 +95,7 @@
   {% else %}
     <div id="no-person-container">
       <p>Please register yourself first.</p>
-      <a href="{% url 'add_self' %}" class="btn btn-outline-success" aria-label="Add Family Member">Add Family Member</a>
+      <a href="{% url 'add_self' %}" class="btn btn-success" aria-label="Add Family Member">Add Family Member</a>
     </div>
   {% endif %}
 {% endblock %}
