--- a/static/css/familytree/entire_view.css
+++ b/static/css/familytree/entire_view.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 body {
-    background: linear-gradient(to bottom right, #fff7e6, #f3e7cb);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
+        url('/static/images/backgrounds/familytree/background.webp');
     font-family: 'Georgia', serif;
     color: #3e3e3e;
 }
@@ -16,7 +17,7 @@ h2 {
     font-family: 'Playfair Display', serif;
     font-size: 2.5rem;
     font-weight: bold;
-    color: #5b3b0a;
+    color: #dfbb69;
     text-align: center;
     margin-bottom: 50px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
@@ -68,7 +69,7 @@ h2::after {
     border: 1px solid #d9c4a6;
     padding: 15px 20px;
     border-radius: 15px;
-    height: 180px;
+    height: fit-content;
     width: 200px;
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.08);
